hopefully fix readability | add favicon

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ h1,h2,h3,h4,h5,h6,.ultrabold{font-family:Source Sans Pro Black,Source Sans Pro,V
   width:calc(100% - 8px);
   height:32px;
   justify-content:space-between;
+  color:#f0f0f0;
   text-shadow:var(--inset);
   backdrop-filter:blur(4px);
 }
@@ -60,13 +61,12 @@ h1,h2,h3,h4,h5,h6,.ultrabold{font-family:Source Sans Pro Black,Source Sans Pro,V
 #topBar{
   top:0;
   background:linear-gradient(#048d,#024d);
-  color:#f0f0f0;
   box-shadow:var(--outset);
 }
 
 .top-bar-section{
   display:flex;
-  width:33.33%;
+  width:25%;
 }
 .top-bar-section:nth-of-type(2){justify-content:center;}
 .top-bar-section:nth-of-type(3){justify-content:right;}
@@ -79,10 +79,11 @@ h1,h2,h3,h4,h5,h6,.ultrabold{font-family:Source Sans Pro Black,Source Sans Pro,V
 }
 #home{
   width:64px;
+  font-size:0px;
   color:#0000;
   text-shadow:0 0;
 }
-#home img{width:100%;height:100%;filter:drop-shadow(0 -1px #000510);}
+#home img{width:100%;height:100%;filter:drop-shadow(0 -1px #000);}
 #search{width:192px;}
 #topUsername{margin:auto 8px;}
 #settings{margin-right:0;}
@@ -156,7 +157,7 @@ button:hover,input[type="button"]:hover,input[type="submit"]:hover,button:focus,
 button:active,input[type="button"]:active,input[type="submit"]:active{
   background-position:0 100%;
   color:#d0d0d0;
-  box-shadow:0 0 1px 1px #000510;
+  box-shadow:0 0 1px 1px #000;
 }
 
 .signup button{
@@ -169,7 +170,7 @@ button:active,input[type="button"]:active,input[type="submit"]:active{
   bottom:0;
   text-align:center;
   background:linear-gradient(#024d,#048d);
-  box-shadow:0 -2px 2px #000510;
+  box-shadow:0 -2px 2px #000;
 }
 #footer p{margin:auto;}
 
